# TotalSegmentator-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: windows-release-runtime-dlls.md
include/: totalseg.h  ts_alignment.h  ts_bspline_prefilter.h  ts_cropping.h  ts_label_map.h  ts_nifti_io.h  ts_onnx_inference.h  ts_pipeline.h  ts_postprocessing.h  ts_resampling.h  ts_sliding_window.h  ts_types.h
models/: class_names.json  label_mapping.json
scripts/: dump_py_resampled.py  export_onnx.py  generate_e2e_gt.py  generate_full_gt.py  generate_full_onnx_gt.py  python_inference.py  save_hires_seg.py  single_patch_test.py
src/: alignment.cpp  bspline_prefilter.cpp  cropping.cpp  label_map.cpp  main.cpp  nifti_io.cpp  onnx_inference.cpp  pipeline.cpp  postprocessing.cpp  resampling.cpp  sliding_window.cpp
tests/: cubic_test.cpp  e2e_test.cpp  generate_ground_truth.py  generate_smoke_input.cpp  hires_compare.cpp  inspect_label_volume.cpp  isolated_infer_test.cpp  main_test.cpp  multi_resample_test.cpp  multi_test.py  resample_back_test.cpp  single_patch_test.cpp
